--- a/lstm_stock_predictor_closing.ipynb
+++ b/lstm_stock_predictor_closing.ipynb
@@ -2032,17 +2032,17 @@
       "Epoch 2/10\n",
       "8/8 [==============================] - 0s 10ms/step - loss: 0.0825\n",
       "Epoch 3/10\n",
-      "8/8 [==============================] - 0s 11ms/step - loss: 0.0326\n",
+      "8/8 [==============================] - 0s 12ms/step - loss: 0.0326\n",
       "Epoch 4/10\n",
-      "8/8 [==============================] - 0s 10ms/step - loss: 0.0185\n",
+      "8/8 [==============================] - 0s 11ms/step - loss: 0.0185\n",
       "Epoch 5/10\n",
-      "8/8 [==============================] - 0s 10ms/step - loss: 0.0181\n",
+      "8/8 [==============================] - 0s 11ms/step - loss: 0.0181\n",
       "Epoch 6/10\n",
-      "8/8 [==============================] - 0s 10ms/step - loss: 0.0174\n",
+      "8/8 [==============================] - 0s 11ms/step - loss: 0.0174\n",
       "Epoch 7/10\n",
-      "8/8 [==============================] - 0s 10ms/step - loss: 0.0133\n",
+      "8/8 [==============================] - 0s 11ms/step - loss: 0.0133\n",
       "Epoch 8/10\n",
-      "8/8 [==============================] - 0s 11ms/step - loss: 0.0099\n",
+      "8/8 [==============================] - 0s 10ms/step - loss: 0.0099\n",
       "Epoch 9/10\n",
       "8/8 [==============================] - 0s 10ms/step - loss: 0.0123\n",
       "Epoch 10/10\n",
@@ -2052,7 +2052,7 @@
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1ebc5946550>"
+       "<keras.callbacks.History at 0x2529a7d4c40>"
       ]
      },
      "execution_count": 16,
